Applications/Homepage/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    reloader.stakater.com/reload: 'false'  # Enables reloader for this namespace
