Applications/Homepage/base/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app.kubernetes.io/component: 'application'  # The component within the architecture
spec:
  revisionHistoryLimit: 3
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: 'application'  # The component within the architecture
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      serviceAccountName: homepage
      automountServiceAccountToken: true
      enableServiceLinks: true
      securityContext:
        fsGroup: 1000
      containers:
        - name: homepage
          image: 'ghcr.io/gethomepage/homepage:0.0.0'
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - DAC_OVERRIDE
                - DAC_READ_SEARCH
                - FOWNER
                - SETGID
                - SETUID
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: false
          resources:
            requests:
              cpu: 0.1
              memory: 128Mi
            limits:
              cpu: 0.25
              memory: 256Mi
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
              httpHeaders:
                - name: Host
                  value: gethomepage.dev
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
              httpHeaders:
                - name: Host
                  value: gethomepage.dev
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
              httpHeaders:
                - name: Host
                  value: gethomepage.dev
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - mountPath: /app/config/bookmarks.yaml
              name: homepage-config-vol
              subPath: bookmarks.yaml
            - mountPath: /app/config/custom.css
              name: homepage-config-vol
              subPath: custom.css
            - mountPath: /app/config/custom.js
              name: homepage-config-vol
              subPath: custom.js
            - mountPath: /app/config/docker.yaml
              name: homepage-config-vol
              subPath: docker.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: homepage-config-vol
              subPath: kubernetes.yaml
            - mountPath: /app/config/services.yaml
              name: homepage-config-vol
              subPath: services.yaml
            - mountPath: /app/config/settings.yaml
              name: homepage-config-vol
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: homepage-config-vol
              subPath: widgets.yaml
      volumes:
        - name: homepage-config-vol
          configMap:
            name: homepage-config
