Applications/Homepage/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app.kubernetes.io/component: 'application'
spec:
  selector:
    app.kubernetes.io/name: homepage
  clusterIP: None
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
  type: ClusterIP
