Applications/Homepage/base/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  labels:
    app.kubernetes.io/component: 'application'
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: CHANGE_ME
      kind: Rule
      middlewares:
        - name: chain-default
          namespace: traefik-system
      services:
        - name: homepage
          port: 3000
          passHostHeader: true
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: homepage-certificate
